# acr

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION_TESTS.md  PROJECT_STATUS.md  README.md  TODO.md  acr.json.sample  audiocontrol.dev.json  audiocontrol.json  audiocontrol.json.sample  audiocontrol.mpd.music_directory.json.sample  audiocontrol_mpris_sample.json  build-and-test.sh  build-helper.sh  build-unix.sh  build.rs  build.sh  example-config-librespot.json  hifiberryos.json  logging.json.sample  run-test.bat  run-test.sh  sample-config.json  secrets.txt.sample  spotify.rs.fix  test.bat  test.ps1  test_chunk_data.py  test_config_18080.json  test_config_3004.json  test_generic_player.sh  test_logging.json  test_queue.json
.github/instructions/: default.instructions.md
.github/workflows/: debian.yml  rust.yml
auth.d/: audiocontrol-auth.json
conf/: genre.txt  genres.json
configs/: audiocontrol.json  genres.json  logging.json
debian/: acr.install  acr.service  audiocontrol.service  changelog  conffiles  control  copyright  dirs  hifiberry-audiocontrol.install  hifiberry-audiocontrol.nginx  logging.json  logging.json.sample  manpages  postinst  preinst  rules
debian/man/: acr_notify_librespot.1  audiocontrol.1  audiocontrol_dump_cache.1  audiocontrol_dump_settingsdb.1  audiocontrol_dump_store.1  audiocontrol_favourites.1  audiocontrol_get_mpris_state.1  audiocontrol_input_devices.1  audiocontrol_list_genres.1  audiocontrol_list_mpris_players.1  audiocontrol_listen_shairportsync.1  audiocontrol_lms_client.1  audiocontrol_monitor_mpris_state.1  audiocontrol_musicbrainz_client.1  audiocontrol_notify_librespot.1  audiocontrol_nowplaying.1  audiocontrol_player_event_client.1  audiocontrol_send_update.1  pause-all.1
doc/: GenericPlayerController.md  README.md  acr_lastfm_auth.md  acr_send_update.md  api.md  bluetooth.md  caching.md  cli_tools.md  generic_player_controller.md  imagegrading.md  inputs.md  lastfm.md  library.md  links.md  logging.md  lyrics_api.md  metadata.md  mpd.md  mpris.md  musicbrainz_client.md  player-event-client.md  player_event_client.md  rate_limiting.md  settingsdb.md  spotify.md  systemd_integration.md  websocket.md
example/: audiocontrol.librespot.only.json.sample  example-config-generic.json  example-config-librespot.json  example-config-raat.json  example-config-shairport.json
example-app/: lastfm.html  library.html  player-functions.js  player.html  spotify.html  websocket.html
example/python/: audiocontrol_nowplaying.py
example/web/: queue-event-listeners.js  websocket.html
examples/: audiocontrol.librespot.only.json.sample
integration_test/: conftest.py  test_activemonitor_integration.py  test_backgroundjobs_integration.py  test_cache_integration.py  test_config_generic.json  test_coverart_integration.py  test_fanarttv.py  test_favourites_integration.py  test_generic_integration.py  test_librespot_integration.py  test_mpd_integration.py  test_raat_integration.py  test_theaudiodb.py  test_websocket.py
scripts/: pause-all
secrets/: security_store.json
src/: config.rs  constants.rs  lib.rs  logging.rs  main.rs  secrets.rs
src/api/: backgroundjobs.rs  cache.rs  coverart.rs  events.rs  favourites.rs  genres.rs  imagecache.rs  inputs.rs  lastfm.rs  library.rs  lyrics.rs  m3u.rs  mod.rs  players.rs  plugins.rs  plugins.rs.new  server.rs  settings.rs  spotify.rs  theaudiodb.rs  volume.rs
src/audiocontrol/: audiocontrol.rs  eventbus.rs  mod.rs
src/data/: album.rs  album_artists.rs  artist.rs  capabilities.rs  library.rs  loop_mode.rs  metadata.rs  mod.rs  player.rs  player_command.rs  player_event.rs  player_state.rs  player_update.rs  serializable.rs  song.rs  song_update.rs  stream_details.rs  system_event.rs  track.rs
src/helpers/: albumupdater.rs  artist_store.rs  artistsplitter.rs  artistupdater.rs  attributecache.rs  backgroundjobs.rs  bluez.rs  configurator.rs  coverart.rs  coverart_providers.rs  fanarttv.rs  favourites.rs  genre_cleanup.rs  global_volume.rs  http_client.rs  image_grader.rs  image_meta.rs  imagecache.rs  lastfm.rs  lyrics.rs  m3u.rs  macaddress.rs  memory_report.rs  mod.rs  mpris.rs  musicbrainz.rs  playback_progress.rs  process_helper.rs  ratelimit.rs  retry.rs  sanitize.rs  security_store.rs  settingsdb.rs  shairportsync_messages.rs  songsplitmanager.rs  songtitlesplitter.rs  spotify.rs  stream_helper.rs  systemd.rs  theartistdb.rs  (+4 more)
src/inputs/: dispatch.rs  mod.rs  registry.rs
src/inputs/keyboard/: evdev_source.rs  keymap.rs  mod.rs
src/players/: base_controller.rs  event_api.rs  generic_controller.rs  mod.rs  mpd.rs  null_controller.rs  player_controller.rs  player_factory.rs
src/players/bluetooth/: bluetooth.rs  mod.rs  tests.rs
src/players/generic/: API.md  generic_controller.rs  mod.rs  tests.rs
src/players/librespot/: CONFIGURATION.md  EVENT_PIPE_FORMAT.md  event_api_processor.rs  event_common.rs  mod.rs  (+3 more)
src/plugins/: action_plugin.rs  event_filter.rs  mod.rs  plugin.rs  plugin_factory.rs  plugin_factory_example.rs
src/tools/: acr_dump_cache.rs  acr_dump_settingsdb.rs  acr_dump_store.rs  acr_favourites.rs  acr_get_mpris_state.rs  acr_input_devices.rs  acr_lastfm_auth.rs  acr_list_genres.rs  acr_list_mpris_players.rs  acr_listen_shairportsync.rs  acr_lms_client.rs  acr_monitor_mpris_state.rs  acr_musicbrainz_client.rs  acr_notify_librespot.rs  acr_player_event_client.rs  acr_send_update.rs  audiocontrol_bluetooth_info.rs  audiocontrol_dump_cache.rs  lms_client.rs  mod.rs  show_cache.rs
src/webserver/: api_server.rs  mod.rs
testdata/: generate_sine_album.sh
testdata/lyrics/: digital_dreams.lrc  invalid_format.lrc  simple_song.lrc
tests/: README.md  activemonitor_integration_test.rs  all_integration_tests.rs  cli_integration_tests.rs  conftest.py  full_integration_tests.rs  generic_integration_tests.rs  integration_tests.rs  librespot_integration_tests.rs  mpd_integration_tests.rs  raat_integration_tests.rs  requirements.txt  run_tests.py  test_generic_integration.md  test_generic_integration.py  test_librespot_integration.py
tests/common/: mod.rs
tools/: pipebridge.rs
(+31 files in other folders)
