[package]
name = "acr"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
mpd = "0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"
ctrlc = "3.4"
lazy_static = "1.4.0"
delegate = "0.10.0"
futures = "0.3"
url = "2.4"
enumflags2 = "0.7.7"
chrono = "0.4"  # For timestamp formatting
# Added Rocket for API server
rocket = { version = "0.5.0-rc.2", features = ["json"] }
# MusicBrainz API client
musicbrainz_rs = "0.5.0"
# For image cache
reqwest = { version = "0.11", features = ["json", "blocking"] }
bytes = "1.4"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

# Non-Windows dependencies (Linux, macOS, etc.)
[target.'cfg(not(windows))'.dependencies]
# Add any Linux-specific alternatives here if needed
