[package]
name = "acr"
version = "0.1.0"
edition = "2021"
default-run = "acr"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
mpd = "0.1"
tokio = { version = "1.45.0", features = ["full"] }
log = "0.4"
env_logger = "0.11.8"
once_cell = "1.19"
ctrlc = "3.4"
lazy_static = "1.4.0"
delegate = "0.10.0"
futures = "0.3"
url = "2.4"
enumflags2 = "0.7.7"
chrono = { version = "0.4", features = ["serde"] }  # For timestamp formatting with serde support
# Added Rocket for API server with static file support
rocket = { version = "0.5.1", features = ["json"] }
# For URL encoding in API requests
urlencoding = "2.1.3"
# For image cache
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
bytes = "1.4"
# In-memory database with persistence
sled = "0.34.7"  # Keeping this at 0.34.7 as 1.0.0-alpha may have breaking changes
# For transliterating non-ASCII characters to ASCII 
deunicode = "1.4.1"
strsim = "0.11.1"
# For in-memory cache with expiry
moka = { version = "0.12", features = ["sync"] }
# For WebSocket support
rocket_ws = "0.1.0"
# For command line argument parsing
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
mac_address = "1.1.8"
get_if_addrs = "0.5.3"
hex = "0.4.3"
# For async trait implementations
async-trait = "0.1.77"
# Simple synchronous HTTP client without tokio dependency
ureq = "2.9"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

# Non-Windows dependencies (Linux, macOS, etc.)
[target.'cfg(not(windows))'.dependencies]
# Add any Linux-specific alternatives here if needed

# Binary targets
[[bin]]
name = "dumpcache"
path = "src/tools/dumpcache.rs"

[[bin]]
name = "lms_client"
path = "src/tools/lms_client.rs"