[package]
name = "audiocontrol"
version = "0.5.2"
edition = "2021"
default-run = "audiocontrol"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
mpd = "0.1"
tokio = { version = "1.45.0", features = ["full"] }
log = "0.4"
env_logger = "0.11.8"
once_cell = "1.19"
ctrlc = "3.4"
lazy_static = "1.4.0"
delegate = "0.10.0"
futures = "0.3"
url = "2.4"
enumflags2 = "0.7.7"
chrono = { version = "0.4", features = ["serde"] }  # For timestamp formatting with serde support
# Added Rocket for API server with static file support
rocket = { version = "0.5.1", features = ["json"] }
# For URL encoding in API requests
urlencoding = "2.1.3"
# For image cache
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
bytes = "1.4"
# In-memory database with persistence
sled = "0.34.7"  # Keeping this at 0.34.7 as 1.0.0-alpha may have breaking changes
# For transliterating non-ASCII characters to ASCII 
deunicode = "1.4.1"
strsim = "0.11.1"
# For in-memory cache with expiry
moka = { version = "0.12", features = ["sync"] }
# For WebSocket support
rocket_ws = "0.1.0"
# For command line argument parsing
clap = { version = "4.5", features = ["derive"] }
# For calculating MD5 hashes (Last.fm API signing)
md5 = "0.7.0"
thiserror = "1.0"
mac_address = "1.1.8"
get_if_addrs = "0.5.3"
hex = "0.4.3"
# For secure storage encryption
aes-gcm = "0.10.2"
rand = "0.8.5"
# For filesystem notifications
notify = "6.0"
base64 = "0.21.0"
# For testing
tempfile = "3.8.1"
# For async trait implementations
async-trait = "0.1.77"
# Simple synchronous HTTP client without tokio dependency
ureq = "2.9"
# For event bus messaging
event-bus = "0.1.0" # Corrected version
# For concurrent data structures and channels
crossbeam = "0.8.2"

[features]
default = []
theaudiodb = []

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

# Non-Windows dependencies (Linux, macOS, etc.)
[target.'cfg(not(windows))'.dependencies]
# For D-Bus communication and custom MPRIS implementation (Linux/Unix only)
dbus = "0.9"

# Build dependencies
[build-dependencies]
base64 = "0.21.0"
md5 = "0.7.0"

# Development dependencies for testing
[dev-dependencies]
serial_test = "3.0"

# Binary targets
[[bin]]
name = "audiocontrol_dump_cache"
path = "src/tools/acr_dump_cache.rs"

[[bin]]
name = "audiocontrol_dump_settingsdb"
path = "src/tools/acr_dump_settingsdb.rs"

[[bin]]
name = "audiocontrol_lms_client"
path = "src/tools/acr_lms_client.rs"

[[bin]]
name = "audiocontrol_send_update"
path = "src/tools/acr_send_update.rs"

[[bin]]
name = "audiocontrol_dump_store"
path = "src/tools/acr_dump_store.rs"

[[bin]]
name = "audiocontrol_player_event_client"
path = "src/tools/acr_player_event_client.rs"

[[bin]]
name = "audiocontrol_notify_librespot"
path = "src/tools/acr_notify_librespot.rs"

# MPRIS tools are only available on Unix-like systems
[[bin]]
name = "audiocontrol_list_mpris_players"
path = "src/tools/acr_list_mpris_players.rs"

[[bin]]
name = "audiocontrol_get_mpris_state"
path = "src/tools/acr_get_mpris_state.rs"

[[bin]]
name = "audiocontrol_monitor_mpris_state"
path = "src/tools/acr_monitor_mpris_state.rs"

[[bin]]
name = "audiocontrol_listen_shairportsync"
path = "src/tools/acr_listen_shairportsync.rs"
